bump `z-index` of the `.column-configurator` to ensure it sits on top of any 'sticky pinboard row'

--- a/public/components/content-list/_content-list.scss
+++ b/public/components/content-list/_content-list.scss
@@ -351,7 +351,7 @@ google-auth-banner .alert {
 
     right: 15px;
     width: 180px;
-    z-index: 2;
+    z-index: 3;
 
     // _toolbar-sections-dropdown.scss:71
     background-color: #ffffff;
